FAI-3382 - undo changes
