# src/Recruit.Api/Controllers/UserController.cs
@@ -1,8 +1,8 @@
-using Microsoft.AspNetCore.JsonPatch.SystemTextJson;
-using Microsoft.AspNetCore.JsonPatch.SystemTextJson.Exceptions;
-using Microsoft.AspNetCore.JsonPatch.SystemTextJson.Operations;
+using Microsoft.AspNetCore.JsonPatch;
+using Microsoft.AspNetCore.JsonPatch.Exceptions;
+using Microsoft.AspNetCore.JsonPatch.Operations;
 using Microsoft.AspNetCore.Mvc;
-using System.Text.Json;
+using Newtonsoft.Json.Linq;
 using SFA.DAS.Recruit.Api.Core;
 using SFA.DAS.Recruit.Api.Core.Extensions;
 using SFA.DAS.Recruit.Api.Data.Repositories;
@@ -28,10 +28,8 @@ public class UserController
                     {
                         path = nameof(UserEntity.EmployerAccounts),
                         op = operation.op,
-                        value = JsonSerializer.Deserialize<long[]>(
-                                ((JsonElement)operation.value).GetRawText())!
-                            .Select(accountId => new UserEmployerAccountEntity
-                            { UserId = (Guid)key, EmployerAccountId = accountId })
+                        value = (operation.value as JArray)!.Select(x => new UserEmployerAccountEntity
+                            { UserId = (Guid)key, EmployerAccountId = x.Value<long>()! })
                     },
                     _ => throw new JsonPatchException(new JsonPatchError(null, operation, $"Operation type '{operation.op}' not supported for property '{nameof(UserEntity.EmployerAccounts)}'"))
                 };
